<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_menu_book"
            android:title="@string/menu_book"/>
        <item
            android:id="@+id/nav_borrowed"
            android:icon="@drawable/ic_menu_borrowed"
            android:title="@string/menu_borrowed"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_category"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_log_out"/>
    </group>
</menu>