<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bookbuddy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_borrowed"
        android:name="com.example.bookbuddy.ui.borrowed.BorrowedFragment"
        android:label="@string/menu_borrowed"
        tools:layout="@layout/fragment_borrowed" />

    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.bookbuddy.ui.book.BookFragment"
        android:label="@string/menu_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.bookbuddy.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />
</navigation>